changed about us page to use smaller cherub animation

--- a/gk/curtain/assets/curtain_mobile/curtain_mobile.html
+++ b/gk/curtain/assets/curtain_mobile/curtain_mobile.html
@@ -86,7 +86,7 @@ function handleComplete(evt,comp) {
 			stage.tickOnUpdate = true;		
 		}
 	}
-	makeResponsive(true,'width',true,2);	
+	makeResponsive(false,'width',false,2);	
 	AdobeAn.compositionLoaded(lib.properties.id);
 	fnStartAnimation();
 }
