--- a/gk/curtain/phone/about-us.html
+++ b/gk/curtain/phone/about-us.html
@@ -18,9 +18,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=24131468" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=60634718" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>#u5312 {  pointer-events: none;}</style>
+  <style>#u5337 {  pointer-events: none;}</style>
   <!--/*
 
 */
@@ -96,8 +96,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u3524-4" href="games.html" data-href="page:U2909" data-muse-uid="U3524" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
     </div>
-    <div class="grpelem" id="u5312"><!-- animation -->
-     <iframe class="animationContainer an_invi" id="U5315_animation" src="../assets/curtain_mobile/curtain_mobile.html" scrolling="no"></iframe>
+    <div class="grpelem" id="u5337"><!-- animation -->
+     <iframe class="animationContainer an_invi" id="U5340_animation" src="../assets/curtain_mobile/curtain_mobile.html" scrolling="no"></iframe>
     </div>
    </div>
    <div class="ose_pre_init mse_pre_init" id="u1480"><!-- content --></div>
@@ -121,8 +121,8 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1480').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u1480').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"opacity":0,"in":[0,0]},{"in":[0,Infinity],"fade":25,"opacity":100}]);/* scroll effect */
+$('#u1480').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u1480').registerOpacityScrollEffect([{"in":[null,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,null],"fade":25,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
