changed dark about us (mobile) to use smaller cherubs

--- a/gk/curtain/phone/about-us-dark.html
+++ b/gk/curtain/phone/about-us-dark.html
@@ -18,9 +18,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us Dark</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us-dark.css?crc=4132715629" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us-dark.css?crc=76589677" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>#u5319 {  pointer-events: none;}</style>
+  <style>#u5344 {  pointer-events: none;}</style>
   <!--/*
 
 */
@@ -80,8 +80,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u5138-4" href="games-dark.html" data-href="page:U4658" data-muse-uid="U5138" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
     </div>
-    <div class="grpelem" id="u5319"><!-- animation -->
-     <iframe class="animationContainer an_invi" id="U5322_animation" src="../assets/curtain_night_mobile/curtain_night_mobile.html" scrolling="no"></iframe>
+    <div class="grpelem" id="u5344"><!-- animation -->
+     <iframe class="animationContainer an_invi" id="U5347_animation" src="../assets/curtain_night_mobile/curtain_night_mobile.html" scrolling="no"></iframe>
     </div>
    </div>
    <div class="clearfix grpelem" id="pu5072"><!-- group -->
@@ -127,15 +127,15 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u5072').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u5073').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u5074').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u5075').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u5076-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u5077-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u5079-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u5080').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0.2]},{"speed":[0,0],"in":[0.2,Infinity]}]);/* scroll effect */
-$('#u5080').registerOpacityScrollEffect([{"in":[-Infinity,0.2],"fade":0,"opacity":0},{"opacity":0,"in":[0.2,0.2]},{"in":[0.2,Infinity],"fade":25,"opacity":100}]);/* scroll effect */
+$('#u5072').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u5073').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u5074').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u5075').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u5076-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u5077-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u5079-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u5080').registerPositionScrollEffect([{"in":[-Infinity,0.2],"speed":[0,0]},{"in":[0.2,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u5080').registerOpacityScrollEffect([{"in":[null,0.19999999999998153],"fade":0,"opacity":0},{"in":[0.2,0.2],"opacity":0},{"in":[0.19999999999998153,null],"fade":25,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
