made curtain a bit faster

--- a/gk/curtain/about-us.html
+++ b/gk/curtain/about-us.html
@@ -22,9 +22,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=4023609718" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=392359947" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>#u5279 {  pointer-events: none;}</style>
+  <style>#u5526 {  pointer-events: none;}</style>
   <!--/*
 
 */
@@ -53,9 +53,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clearfix" id="u3110-4" href="games.html" data-href="page:U2961" data-muse-uid="U3110" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
     <!-- /m_editable -->
     <div class="ose_pre_init" id="u3111"><!-- content --></div>
-    <div class="browser_width" id="u5279-bw">
-     <div id="u5279"><!-- animation -->
-      <iframe class="animationContainer an_invi" id="U5282_animation" src="assets/curtain/curtain.html" scrolling="no"></iframe>
+    <div class="browser_width" id="u5526-bw">
+     <div id="u5526"><!-- animation -->
+      <iframe class="animationContainer an_invi" id="U5529_animation" src="assets/curtain/curtain.html" scrolling="no"></iframe>
      </div>
     </div>
    </div>
@@ -126,7 +126,7 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u3111').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"opacity":0,"in":[0,0]},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
+$('#u3111').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"opacity":0,"in":[0,0]},{"fade":50,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
