--- a/gk/curtain/index.html
+++ b/gk/curtain/index.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=406506159" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=295828884" id="pagesheet"/>
     <!--custom head HTML-->
   <script>/*	var d = new Date();	var currentTime = d.getHours();	if (currentTime >= 19 || currentTime < 7) {		window.location.replace("home-dark.html");	}*/</script>
   <!--HTML Widget code-->
@@ -550,12 +550,12 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u2581').registerOpacityScrollEffect([{"in":[-Infinity,509],"fade":0,"opacity":0},{"opacity":0,"in":[509,509]},{"in":[509,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
+$('#u2581').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,509],"opacity":0},{"opacity":0,"in":[509,509]},{"fade":50,"in":[509,Infinity],"opacity":100}]);/* scroll effect */
 $('#u2158').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,100]},{"speed":[0,2],"in":[100,Infinity]}]);/* scroll effect */
-$('#u2158').registerOpacityScrollEffect([{"in":[-Infinity,100],"fade":0,"opacity":100},{"opacity":100,"in":[100,100]},{"in":[100,Infinity],"fade":100,"opacity":0}]);/* scroll effect */
+$('#u2158').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,100],"opacity":100},{"opacity":100,"in":[100,100]},{"fade":100,"in":[100,Infinity],"opacity":0}]);/* scroll effect */
 $('#u2159').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[4.5,0],"in":[0,Infinity]}]);/* scroll effect */
 $('#u2160').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2160').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":100},{"opacity":100,"in":[0,0]},{"in":[0,Infinity],"fade":50,"opacity":0}]);/* scroll effect */
+$('#u2160').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":100},{"opacity":100,"in":[0,0]},{"fade":50,"in":[0,Infinity],"opacity":0}]);/* scroll effect */
 $('#u2162').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-7,0],"in":[0,Infinity]}]);/* scroll effect */
 $('#u2163').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[6.5,0],"in":[0,Infinity]}]);/* scroll effect */
 $('#u2164').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-4,0],"in":[0,Infinity]}]);/* scroll effect */
