use local links to games

--- a/gk/phone/games-dark.html
+++ b/gk/phone/games-dark.html
@@ -64,7 +64,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u4654-bw">
      <div id="u4654"><!-- custom html -->
       <div id="cubpupcontainer">
-<iframe id="cubpupiframe" src="https://lanceencarnado.github.io/gk/cubpup/" width="90%" height="500"></iframe>
+<iframe id="cubpupiframe" src="../cubpup/index.html" width="90%" height="500"></iframe>
 </div>
      </div>
     </div>
@@ -76,7 +76,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u4636-bw">
      <div id="u4636"><!-- custom html -->
       <div id="puzzlecontainer">
-<iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_mobile/" width="365" height="300" scrolling="no"></iframe>
+<iframe id="puzzleiframe" src="../puzzle_mobile/index.html" width="365" height="300" scrolling="no"></iframe>
 </div>
      </div>
     </div>
