--- a/gk/phone/games.html
+++ b/gk/phone/games.html
@@ -66,7 +66,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u3812-bw">
      <div id="u3812"><!-- custom html -->
       <div id="cubpupcontainer">
-<iframe id="cubpupiframe" src="https://lanceencarnado.github.io/gk/cubpup/" width="90%" height="500"></iframe>
+<iframe id="cubpupiframe" src="../cubpup/index.html" width="90%" height="500"></iframe>
 </div>
      </div>
     </div>
@@ -78,7 +78,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u3813-bw">
      <div id="u3813"><!-- custom html -->
       <div id="puzzlecontainer">
-<iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_mobile/" width="365" height="300" scrolling="no"></iframe>
+<iframe id="puzzleiframe" src="../puzzle_mobile/index.html" width="365" height="300" scrolling="no"></iframe>
 </div>
      </div>
     </div>
