--- a/gk/games-dark.html
+++ b/gk/games-dark.html
@@ -68,7 +68,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u4131-bw">
      <div id="u4131"><!-- custom html -->
       <div id="cubpupcontainer">
-<iframe id="cubpupiframe" src="https://lanceencarnado.github.io/gk/cubpup/" width="80%" height="700" scrolling="no"></iframe>
+<iframe id="cubpupiframe" src="./cubpup/index.html" width="80%" height="700" scrolling="no"></iframe>
 </div>
      </div>
     </div>
@@ -80,7 +80,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u4132-bw">
      <div id="u4132"><!-- custom html -->
       <div id="puzzlecontainer">
-<iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_responsive/" width="80%" height="700"></iframe>
+<iframe id="puzzleiframe" src="./puzzle_responsive/index.html" width="80%" height="700"></iframe>
 </div>
      </div>
     </div>
